Fix T47444: Texture node in compositing nodes does not update